cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_325.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/record/rec_layer_d1.c:230: error: DEAD_STORE
  The value written to &replayok (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/record/rec_layer_d1.c:230:5: Write of unused value
228.       DTLS1_BITMAP *bitmap;
229.       unsigned int is_next_epoch;
230.       int replayok = 1;
           ^
231.   
232.       item = pqueue_peek(s->rlayer.d->unprocessed_rcds.q);
